# saferalloc

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: release.yml  snapshot.yml
saferalloc/: build.gradle
saferalloc-natives-android/: build.gradle
saferalloc-natives-android/src/main/: AndroidManifest.xml
saferalloc-natives-android/src/main/native/: CMakeLists.txt
saferalloc-natives-linux-aarch64/: build.gradle
saferalloc-natives-linux-x86_64/: build.gradle
saferalloc-natives-linux-x86_64/src/main/native/: CMakeLists.txt
saferalloc-natives-macos-aarch64/: build.gradle
saferalloc-natives-macos-x86_64/: build.gradle
saferalloc-natives-windows-aarch64/: build.gradle
saferalloc-natives-windows-x86_64/: build.gradle
saferalloc-natives-windows-x86_64/src/main/native/: CMakeLists.txt
saferalloc/src/main/c/: saferalloc.c  saferalloc_probes.c
saferalloc/src/main/java/org/ngengine/saferalloc/: NativeLibraryLoader.java  SaferAlloc.java  SaferAllocFunctionPointers.java  SaferAllocNative.java
saferalloc/src/test/java/org/ngengine/saferalloc/: DestructiveForkedTest.java  DestructiveMain.java  ExploitProbeTest.java  SaferAllocProbe.java  SaferAllocProbeNative.java  SaferAllocSmokeTest.java
